test/files/neg/t9529.scala
@deprecated("foo", "")
@deprecated("bar", "")
class `scala ftw`

@javax.annotation.Resource(name = "baz")
@javax.annotation.Resource(name = "quux")
class TooMany