test/files/neg/t9529.check
t9529.scala:7: error: Java annotation Resource may not appear multiple times on class TooMany
class TooMany
      ^
one error found
